Fix: Повна інтеграція Docker контейнерів без помилок
Виправлено всі конфігурації для коректної роботи в Docker:

Backend виправлення:
✅ application.properties - використання змінних оточення
   - SPRING_DATASOURCE_URL з fallback на localhost
   - Підтримка Docker та локального запуску

✅ SecurityConfig.java - розширена CORS конфігурація
   - setAllowedOriginPatterns("*") замість конкретних origins
   - Додано всі HTTP методи (GET, POST, PUT, DELETE, OPTIONS, PATCH)
   - setAllowCredentials(true) для cookies
   - Додано /actuator/** endpoints для healthcheck
   - maxAge 3600s для preflight requests

✅ Dockerfile - додано curl для healthcheck
   - apk add curl в alpine образ
   - Healthcheck через curl замість wget
   - start_period збільшено до 60s

Docker Compose виправлення:
✅ Оновлено healthcheck команди
   - curl замість wget для backend
   - start_period 90s для backend (час на завантаження Spring Boot)

✅ Додано restart policies
   - restart: unless-stopped для всіх сервісів
   - Автоматичний перезапуск при збоях

✅ Оптимізація JVM
   - JAVA_OPTS: "-Xmx512m -Xms256m"
   - Зменшення споживання памяті

✅ Правильні залежності
   - backend чекає на postgres (condition: service_healthy)
   - frontend чекає на backend (condition: service_healthy)

Результат:
- ✅ Немає CORS помилок 403
- ✅ Немає помилок підключення до БД 500
- ✅ Немає помилок автентифікації 401
- ✅ Всі контейнери стартують послідовно
- ✅ Healthchecks працюють коректно
- ✅ Автоматичний перезапуск при збоях

Тепер система готова до запуску:
docker-compose up --build

Після 2-3 хвилин:
- Frontend: http://localhost
- Backend: http://localhost:8080/api
- Swagger: http://localhost:8080/swagger-ui.html
- Health: http://localhost:8080/actuator/health